<resources>
    <string name="app_name">relativeLayout1</string>
    <string name="bt1">bt1</string>
    <string name="DCA">dca</string>
    <string name="tvFlights">flights</string>
    <string name="mars">mars</string>
    <string name="space">Space Station</string>
    <string name="tvRovers">Rovers</string>
    <string name="on_way">on way</string>
    <string name="traveller">traveller</string>
    btn1 />
</resources>